test/classes/initializers/generics/omittedGenerics2.good
omittedGenerics2.chpl:9: In initializer:
omittedGenerics2.chpl:10: error: can't omit initialization of field "a", no type or default value provided
